[project]
name = "reto2-url-shortener"
version = "1.0.0"
description = "Reto 2 · URL shortener (FastAPI + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
# `.` hace importable el paquete `app`; `..` hace importable `shared`.
pythonpath = [".", ".."]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["app*"]
